fix horizontal scrolling for submission

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,5 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1184px;
+  /* max-width: 1184px; */
+  max-width: 984px;
+
 }
