--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -9,16 +9,10 @@
   grid-gap: 16px;
 }
 
-@media screen and (max-width: 1184px) {
+@media screen and (max-width: 1280px) {
   .gallery {
     margin: 0;
-    width: 100%;
-    max-width: 984px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .gallery {
     max-width: 100%;
+    width: 100%;
   }
 }
