--- a/blocks/page/__wrapper/page__wrapper.css
+++ b/blocks/page/__wrapper/page__wrapper.css
@@ -14,9 +14,3 @@
     margin: 0 16px;
   }
 }
-
-@media screen and (min-width: 1280px) {
-  .page__wrapper {
-    margin: 0 auto;
-  }
-}
